k8-Ingress-setup/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    name: app1
spec:
  containers:
  - name: http-echo
    image: hashicorp/http-echo
    args:
    - "-text=Hello World 1"
    - "-listen=:8000"
    ports:
    - containerPort: 8000

---
apiVersion: v1
kind: Pod
metadata:
  name: app2
  labels:
    name: app2
spec:
  containers:
  - name: http-echo
    image: hashicorp/http-echo
    args:
    - "-text=Hello World 2"
    - "-listen=:8000"
    ports:
    - containerPort: 8000
